--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -83,6 +83,8 @@
   color: var(--alt-text-light);
   border: 1px solid var(--alt-primary);
   background-color: var(--alt-primary);
+  padding: 12px 20px;
+  transition: ease-in-out 0.3s;
   &:hover {
     border: 1px solid var(--alt-primary);
     background-color: transparent;
@@ -95,6 +97,8 @@
   color: var(--alt-text-light);
   border: 1px solid var(--alt-primary);
   background-color: transparent;
+  padding: 12px 20px;
+  transition: ease-in-out 0.3s;
   &:hover {
     border: 1px solid var(--alt-primary);
     background-color: var(--alt-primary);
@@ -107,6 +111,7 @@
   color: var(--alt-text-light);
   border: 1px solid transparent;
   background-color: transparent;
+  transition: ease-in-out 0.3s;
   &:hover {
     border: 1px solid var(--alt-primary);
     background-color: transparent;
