--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -25,6 +25,8 @@ $form-select-color: #595959;
 $custom-theme-colors: (
   alt-primary: #ffd600,
   alt-secondary: #d9d9d9,
+  alt-dark-theme: #15171f,
+  alt-dark-theme-secondary: #202331,
 );
 $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 
@@ -71,6 +73,10 @@ $grid-breakpoints: map-merge($grid-breakpoints, $custom-grid-breakpoints);
   --alt-gray: #f4f4f4;
   --alt-gray-50: #626366;
   --alt-gold: #eda211;
+
+  // theme dark primary
+  --alt-dark-theme-primary: #15171f;
+  --alt-dark-theme-secondary: #202331;
 }
 
 a {
@@ -116,4 +122,13 @@ h6 {
 }
 .accordion-button::after {
   transition: all 0.5s;
+}
+
+.dark_theme {
+  .accordion-button::after {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-plus' viewBox='0 0 16 16'%3E%3Cpath d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z'/%3E%3C/svg%3E");
+  }
+  .accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-dash' viewBox='0 0 16 16'%3E%3Cpath d='M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z'/%3E%3C/svg%3E");
+  }
 }
