--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -110,5 +110,7 @@ h6 {
 @import "role-select";
 @import "steps-page";
 @import "forms";
+@import "badges";
 @import "landing-page";
+@import "about-us-page";
 // @import "freelance-landing-page";
