--- a/sass/_about-us-page.scss
+++ b/sass/_about-us-page.scss
@@ -78,9 +78,13 @@
   padding-top: 96px;
   padding-bottom: 96;
   .section_title {
+    padding-bottom: 40px;
     h2 {
       text-align: start !important;
-      font-size: 56px !important;
+      font-size: 32px !important;
+      @media (min-width: 768px) {
+        font-size: 56px !important;
+      }
     }
   }
   .success_story_content {
@@ -104,11 +108,14 @@
   .section_title {
     padding-bottom: 40px;
     h4 {
-      font-size: 56px;
+      font-size: 32px;
       font-weight: 400;
       color: var(--alt-text-clr);
       font-family: var(--bs-heading-font-family);
       text-align: left;
+      @media (min-width: 768px) {
+        font-size: 56px;
+      }
     }
   }
   .single_trailblazers {
@@ -142,8 +149,11 @@
     padding-bottom: 64px !important;
     h2 {
       text-align: left;
-      font-size: 56px;
+      font-size: 32px;
       line-height: 64.4px;
+      @media (min-width: 768px) {
+        font-size: 56px;
+      }
     }
     p {
       text-align: left;
@@ -186,11 +196,14 @@
   .section_title {
     padding-bottom: 40px !important;
     h4 {
-      font-size: 56px;
+      font-size: 32px;
       font-weight: 400;
       color: var(--alt-text-clr);
       font-family: var(--bs-heading-font-family);
       text-align: left;
+      @media (min-width: 768px) {
+        font-size: 56px;
+      }
     }
   }
   .resource_content {
