this is search page tags

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -113,4 +113,5 @@ h6 {
 @import "badges";
 @import "landing-page";
 @import "about-us-page";
+@import "search-page";
 // @import "freelance-landing-page";
